--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "http://JohnKiranG.github.io/react-demo",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
@@ -13,6 +14,7 @@
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
     "draftjs-to-markdown": "^0.5.1",
+    "gh-pages": "^2.0.1",
     "history": "^4.7.2",
     "html-to-draftjs": "^1.4.0",
     "immutability-helper": "^3.0.0",
@@ -24,9 +26,9 @@
     "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-beautiful-dnd": "9.0.0",
     "react-dimensions": "^1.3.1",
     "react-dnd": "^7.0.2",
-    "react-beautiful-dnd": "9.0.0",
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0",
     "react-draft-wysiwyg": "^1.13.1",
@@ -47,7 +49,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
